Major Improvement: Fixed remaining unblurred features, fixed zombie audio bug.

--- a/plugins/SFWSwitch/additional_plugins.css
+++ b/plugins/SFWSwitch/additional_plugins.css
@@ -12,6 +12,7 @@
 
 /* HotOrNot */
 .hon-performer-image,
+.hon-performer-card,
 .hon-scene-image,
 .hon-selection-image,
 .hon-image-image-container,
@@ -25,7 +26,8 @@
 /* Sprite Tab */
 .sprite-cell
 {
-filter: blur(30px);
+	filter: blur(30px);
+	transition: filter 0.25s ease;
 }
 
 /* === LESS BLUR === */
@@ -43,7 +45,8 @@ filter: blur(30px);
 #on-this-day-section [style*="display: flex"][style*="cursor: pointer"] img + div,
 #on-this-day-section > div:last-child
 {
-filter: blur(2px);
+	filter: blur(2px);
+	transition: filter 0.25s ease;
 }
 
 /* StashBattle */
@@ -54,12 +57,14 @@ filter: blur(2px);
 
 /* HotOrNot */
 .hon-performer-image:hover,
+.hon-performer-card:hover,
 .hon-scene-image:hover,
 .hon-image-image-container:hover,
 .hon-image-image:hover,
 .hon-performer-info.hon-scene-info:hover,
-.hon-selection-card:hover .hon-selection-image,
+.hon-selection-card:hover,
 .hon-selection-name:hover,
+.hon-selection-image:hover,
 
 /* Sprite Tab */
 .sprite-cell:hover,
